load("//bzl:rules.bzl",
     "boot_archive",
     "boot_library",
     "compiler_module",
     "compiler_signature",
)

load("//config:CONFIG.bzl", "w")

WARNINGS = [w.NAME_OUT_OF_SCOPE] # -40
MODULE_OPTS = []

SIG_OPTS    = []

# boot_archive(
boot_library(
    name = "driver",
    manifest  = [
        ":Compenv",
        ":Compile",
        ":Compmisc",
        ":Errors",
        ":Main",
        ":Main_args",
        ":Maindriver",
        ":Makedepend",
        ":Optcompile",
        ":Opterrors",
        ":Optmain",
        ":Optmaindriver",
        ":Pparse",
        ":Compile_common",
    ],
    visibility = [
        "//boot:__subpackages__",
        "//testsuite:__pkg__"
    ]
)

## for //compilerlibs:ocamlcommmon archive:
# defined in compilerlibs/Makefile.compilerlibs as COMP, COMP_CMI
# boot_archive(
boot_library(
    name = "ocamlcommon",
    manifest  = [
        ":Compenv",
        ":Compile_common",
        ":Compmisc",
        ":Main_args",
        ":Makedepend",
        ":Pparse",
    ],
    visibility = ["//compilerlibs:__pkg__"]
)

## compilerlibs/Makefile.compilerlibs
# boot_library(
#     name = "ocamlbytecomp",
#     manifest  = [
#         ":Compile",
#         ":Errors",
#         ":Maindriver",
#     ],
#     visibility = ["//compilerlibs:__pkg__"]
# )

################################################################
compiler_module(
    name   = "Compenv",
    struct = "compenv.ml",
    sig    = "Compenv_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location",
        # "//stdlib:Stdlib.Arg",
        # "//stdlib:Stdlib.Filename",
        # "//stdlib:Stdlib.Lexing",
        # "//stdlib:Stdlib.List",
        # "//stdlib:Stdlib.Option",
        # "//stdlib:Stdlib.Printexc",
        # "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Scanf",
        # "//stdlib:Stdlib.String",
        # "//stdlib:Stdlib.Sys",
        "//utils:Ccomp",
        "//utils:Clflags",
        "//config:Config",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__subpackages__",
    ]
)

compiler_signature(
    name = "Compenv_cmi",
    src  = "compenv.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//utils:Clflags_cmi",
        "//stdlib:Stdlib.Arg_cmi",
    ]
)

compiler_module(
    name   = "Compile",
    struct = "compile.ml",
    sig    = "Compile_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE],
    deps   = [
        ":Compile_common", ## (Driver Compile_common)
        "//typing:Typedtree",
        "//lambda:Translmod",
        "//lambda:Simplif",
        "//utils:Profile",
        "//lambda:Printlambda",
        "//bytecomp:Printinstr",
        "//utils:Misc",
        "//bytecomp:Emitcode",
        "//utils:Clflags",
        "//bytecomp:Bytegen"
    ],
    visibility = ["//bytecomp:__pkg__"]
)

compiler_signature(
    name = "Compile_cmi",
    src  = "compile.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Compile_common_cmi",
        "//typing:Typedtree_cmi",
        "//bytecomp:Instruct_cmi",
        "//typing:Ident_cmi",
        "//utils:Clflags_cmi",
    ]
)

compiler_module(
    name   = "Compile_common",
    struct = "compile_common.ml",
    sig    = "Compile_common_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE],
    deps   = [
        ":Pparse", ## (Driver Pparse)
        ":Compmisc", ## (Driver Compmisc)
        ":Compenv", ## (Driver Compenv)
        "//utils:Warnings",
        "//typing:Typemod",
        "//typing:Typedtree",
        "//typing:Typecore",
        "//stdlib:Stdlib.String",
        "//utils:Profile",
        "//typing:Printtyped",
        "//typing:Printtyp",
        "//parsing:Printast",
        "//parsing:Pprintast",
        "//utils:Misc",
        "//stdlib:Stdlib.List",
        "//typing:Includemod",
        "//stdlib:Stdlib.Format",
        "//typing:Env",
        "//config:Config",
        ## (Compiler_pass)
        "//utils:Clflags",
        "//parsing:Builtin_attributes",
    ],
    visibility = ["//bytecomp:__pkg__"]
)

compiler_signature(
    name = "Compile_common_cmi",
    src  = "compile_common.mli",
    opts = SIG_OPTS,
    deps   = [
        "//typing:Typedtree_cmi",
        "//parsing:Parsetree_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//typing:Env_cmi"
    ]
)

compiler_module(
    name   = "Compmisc",
    struct = "compmisc.ml",
    sig    = "Compmisc_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//parsing:Location",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Sys",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Typemod",
        "//typing:Types",
        "//utils:Clflags",
        "//utils:Load_path",
        "//utils:Misc",
        "//utils:Warnings",
        ":Compenv",

        "//stdlib:Stdlib.Printf", # obazl

    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__subpackages__",
    ]
)

compiler_signature(
    name = "Compmisc_cmi",
    src  = "compmisc.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//typing:Env_cmi",
        "//utils:Clflags_cmi",
    ]
)

compiler_module(
    name   = "Errors",
    struct = "errors.ml",
    sig    = "Errors_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location"
    ],
    visibility = ["//bytecomp:__pkg__"]
)

compiler_signature(
    name = "Errors_cmi",
    src  = "errors.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Main",
    struct = "main.ml",
    opts = MODULE_OPTS,
	warnings = [w.MISSING_MLI],
    deps   = [
        ":Maindriver", ## (Driver Maindriver)
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.Format",
    ],
    visibility = [
        "//bin:__pkg__",
        "//boot:__subpackages__",
        "//dev:__subpackages__"
    ]
)

compiler_module(
    name   = "Main_args",
    struct = "main_args.ml",
    sig    = "Main_args_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//parsing:Location",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
        ":Compenv",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
        "//testsuite:__subpackages__"
    ]
)

compiler_signature(
    name = "Main_args_cmi",
    src  = "main_args.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Arg_cmi",
    ]
)

compiler_module(
    name   = "Maindriver",
    struct = "maindriver.ml",
    sig    = "Maindriver_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE],
    deps   = [
        "//bytecomp:Bytelibrarian",
        "//bytecomp:Bytepackager",
        "//config:Config",
        "//parsing:Location",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//utils:Clflags",
        "//utils:Profile",
        "//utils:Warnings",
        ":Compenv",
        ":Compile",
        ":Compmisc",
        ":Main_args",
        ":Makedepend",
    ],
    visibility = [
        "//bytecomp:__pkg__"
    ]
)

compiler_signature(
    name = "Maindriver_cmi",
    src  = "maindriver.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Makedepend",
    struct = "makedepend.ml",
    sig    = "Makedepend_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE],
    deps   = [
        "//parsing:Depend",
        "//parsing:Lexer",
        "//parsing:Location",
        "//parsing:Parse",
        "//parsing:Parser",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Bytes",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib",
        "//utils:Clflags",
        "//config:Config",
        "//utils:Misc",
        ":Compenv",
        ":Pparse",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Makedepend_cmi",
    src  = "makedepend.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Parsetree_cmi",
        "//stdlib:Stdlib_cmi",
    ]
)

compiler_module(
    name   = "Optcompile",
    struct = "optcompile.ml",
    sig    = "Optcompile_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE],
    deps   = [
        ":Compile_common", ## (Driver Compile_common)
        "//typing:Typedtree",
        "//lambda:Translmod",
        "//lambda:Simplif",
        "//utils:Profile",
        "//lambda:Printlambda",
        "//utils:Misc",
        "//middle_end/flambda:Flambda_middle_end",
        "//config:Config",
        "//middle_end:Compilenv",
        "//middle_end/closure:Closure_middle_end",
        "//utils:Clflags",
        "//asmcomp:Asmgen"
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_signature(
    name = "Optcompile_cmi",
    src  = "optcompile.mli",
    opts = SIG_OPTS,
    deps   = [
        ":Compile_common_cmi",
        "//typing:Typedtree_cmi",
        "//utils:Clflags_cmi",
        "//middle_end:Backend_intf_cmi"
    ]
)

compiler_module(
    name   = "Opterrors",
    struct = "opterrors.ml",
    sig    = "Opterrors_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location"
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_signature(
    name = "Opterrors_cmi",
    src  = "opterrors.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Optmain",
    struct = "optmain.ml",
    opts = MODULE_OPTS,
	warnings = [w.MISSING_MLI],
    deps   = [
        ":Optmaindriver",
    ],
    visibility = [
        "//boot:__subpackages__",
        "//bin:__pkg__",
        "//dev:__subpackages__",
        "//:__pkg__"
    ]
)

compiler_module(
    name   = "Optmaindriver",
    struct = "optmaindriver.ml",
    sig    = "Optmaindriver_cmi",
    opts = MODULE_OPTS,
    warnings = [w.NAME_OUT_OF_SCOPE],
    deps   = [
        ":Optcompile", ## (Driver Optcompile)
        ":Makedepend", ## (Driver Makedepend)
        ":Main_args", ## (Driver Main_args)
        ":Compmisc", ## (Driver Compmisc)
        ":Compenv", ## (Driver Compenv)
        "//utils:Warnings",
        "//stdlib:Stdlib.String",
        "//utils:Profile",
        "//asmcomp:Proc",
        "//stdlib:Stdlib.Printf",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//middle_end/flambda:Import_approx",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//config:Config",
        "//middle_end:Compilenv",
        "//utils:Clflags",
        "//asmcomp:Asmpackager",
        ## (Asmlink)
        "//asmcomp:Asmlibrarian",
        "//stdlib:Stdlib.Arg",
        ## (Arch)
    ],
    visibility = [
        "//asmcomp:__pkg__"
    ]
)

compiler_signature(
    name = "Optmaindriver_cmi",
    src  = "optmaindriver.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Backend_intf_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Pparse",
    struct = "pparse.ml",
    sig    = "Pparse_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//utils:Warnings",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//utils:Profile",
        "//stdlib:Stdlib.Printf",
        "//parsing:Parse",
        "//utils:Misc",
        "//parsing:Location",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Filename",
        "//config:Config",
        "//utils:Clflags",
        "//utils:Ccomp",
        "//parsing:Ast_mapper",
        "//parsing:Ast_invariants"
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
    ]
)

compiler_signature(
    name = "Pparse_cmi",
    src  = "pparse.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Parsetree_cmi",
        "//stdlib:Stdlib.Lexing_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ]
)

