load("//bzl:rules.bzl",
     # "boot_archive",
     "compiler_library",
     "compiler_module",
     "compiler_signature",
)

load("//config:WARNINGS.bzl", "w")

MODULE_OPTS = []

SIG_OPTS    = []

# boot_archive(
# compiler_library(
#     name = "driver",
#     manifest  = [
#         ":Compenv",
#         ":Compile",
#         ":Compmisc",
#         ":Errors",
#         ":Main",
#         ":Main_args",
#         ":Maindriver",
#         ":Makedepend",
#         ":Optcompile",
#         ":Opterrors",
#         ":Optmain",
#         ":Optmaindriver",
#         ":Pparse",
#         ":Compile_common",
#     ],
#     visibility = [
#         "//boot:__subpackages__",
#         "//testsuite:__pkg__"
#     ]
# )

## for //compilerlibs:ocamlcommmon archive:
# defined in compilerlibs/Makefile.compilerlibs as COMP, COMP_CMI
# boot_archive(
compiler_library(
    name = "ocamlcommon",
    archivable = False,
    manifest  = [
        ":Compenv",
        ":Compile_common",
        ":Compmisc",
        ":Main_args",
        ":Makedepend",
        ":Pparse",
    ],
    visibility = [
        "//compilerlibs:__pkg__",
        "//testsuite:__pkg__"
    ]
)

## compilerlibs/Makefile.compilerlibs
# boot_library(
#     name = "ocamlbytecomp",
#     manifest  = [
#         ":Compile",
#         ":Errors",
#         ":Maindriver",
#     ],
#     visibility = ["//compilerlibs:__pkg__"]
# )

################################################################
compiler_module(
    name   = "Compenv",
    struct = "compenv.ml",
    sig    = "Compenv_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        "fragile-match",
        "missing-record-field-pattern"
    ]},
    deps   = [
        "//config:Config",
        "//parsing:Location",
        "//utils:Ccomp",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Scanf",
    ],
    visibility = [
        "//bin:__pkg__",
        "//bytecomp:__pkg__",
        "//toplevel:__subpackages__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Compenv_cmi",
    src  = "compenv.mli",
    opts = SIG_OPTS,
    deps   = [
        "//utils:Clflags_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Arg_cmi",
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Compile",
    struct = "compile.ml",
    sig    = "Compile_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        # "ambiguous-name",
        "disambiguated-name",
        "fragile-match",
        "name-out-of-scope",
        "missing-record-field-pattern",
        # "open-shadow-identifier",
        # "open-shadow-label-constructor",
    ]},
    deps   = [
        "//bytecomp:Bytegen",
        "//bytecomp:Emitcode",
        "//bytecomp:Printinstr",
        "//lambda:Printlambda",
        "//lambda:Simplif",
        "//lambda:Translmod",
        "//typing:Typedtree",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        ":Compile_common",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib",
    ],
    visibility = ["//bytecomp:__pkg__"]
)

compiler_signature(
    name = "Compile_cmi",
    src  = "compile.mli",
    opts = SIG_OPTS,
    deps   = [
        "//bytecomp:Instruct_cmi",
        "//typing:Ident_cmi",
        "//typing:Typedtree_cmi",
        "//utils:Clflags_cmi",
        ":Compile_common_cmi",
    ]
)

compiler_module(
    name   = "Compile_common",
    struct = "compile_common.ml",
    sig    = "Compile_common_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        # "ambiguous-name",
        "disambiguated-name",
        # "fragile-match",
        "name-out-of-scope",
        # "missing-record-field-pattern",
        # "open-shadow-identifier",
        # "open-shadow-label-constructor",
    ]},
    deps   = [
        "//config:Config",
        "//parsing:Builtin_attributes",
        "//parsing:Pprintast",
        "//parsing:Printast",
        "//typing:Env",
        "//typing:Includemod",
        "//typing:Printtyp",
        "//typing:Printtyped",
        "//typing:Typecore",
        "//typing:Typedtree",
        "//typing:Typemod",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
        ":Compenv",
        ":Compmisc",
        ":Pparse",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.String",
    ],
    visibility = ["//bytecomp:__pkg__"]
)

compiler_signature(
    name = "Compile_common_cmi",
    src  = "compile_common.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Parsetree_cmi",
        "//typing:Env_cmi",
        "//typing:Typedtree_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Compmisc",
    struct = "compmisc.ml",
    sig    = "Compmisc_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        # "ambiguous-name",
        # "disambiguated-name",
        # "fragile-match",
        # "name-out-of-scope",
        "missing-record-field-pattern",
        # "open-shadow-identifier",
        # "open-shadow-label-constructor",
    ]},
    deps   = [
        "//config:Config",
        "//parsing:Location",
        "//typing:Env",
        "//typing:Ident",
        "//typing:Typemod",
        "//typing:Types",
        "//utils:Clflags",
        "//utils:Load_path",
        "//utils:Misc",
        "//utils:Warnings",
        ":Compenv",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//debugger:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__subpackages__",
    ]
)

compiler_signature(
    name = "Compmisc_cmi",
    src  = "compmisc.mli",
    opts = SIG_OPTS,
    deps   = [
        "//typing:Env_cmi",
        "//utils:Clflags_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Errors",
    struct = "errors.ml",
    sig    = "Errors_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location"
    ],
    visibility = ["//bytecomp:__pkg__"]
)

compiler_signature(
    name = "Errors_cmi",
    src  = "errors.mli",
    opts = SIG_OPTS,
    stdlib_deps   = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Main",
    struct = "main.ml",
    opts = MODULE_OPTS,
	warnings = {"disable": [w.MISSING_MLI_70]},
    deps   = [
        ":Maindriver",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Sys",
    ],
    visibility = [
        "@dev//:__subpackages__",
        "//bin:__subpackages__",
        "//boot:__subpackages__",
        "//dev:__subpackages__",
        "//test:__pkg__",
    ]
)

compiler_module(
    name   = "Main_args",
    struct = "main_args.ml",
    sig    = "Main_args_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        "disambiguated-name",
    ]},
    deps   = [
        "//config:Config",
        "//parsing:Location",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
        ":Compenv",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
    ],
    visibility = [
        "//bin:__pkg__",
        "//bytecomp:__pkg__",
        "//toplevel:__pkg__",
        "//testsuite:__subpackages__",
        "//tools:__pkg__",
        "//toplevel/native:__pkg__"
    ]
)

compiler_signature(
    name = "Main_args_cmi",
    src  = "main_args.mli",
    opts = SIG_OPTS,
    stdlib_deps   = [
        "//stdlib:Stdlib.Arg_cmi",
    ]
)

compiler_module(
    name   = "Maindriver",
    struct = "maindriver.ml",
    sig    = "Maindriver_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        # "ambiguous-name",
        "disambiguated-name",
        # "fragile-match",
        "name-out-of-scope",
        # "missing-record-field-pattern",
        # "open-shadow-identifier",
        # "open-shadow-label-constructor",
    ]},
    deps   = [
        "//bytecomp:Bytelibrarian",
        "//bytecomp:Bytepackager",
        "//config:Config",
        "//parsing:Location",
        "//utils:Clflags",
        "//utils:Profile",
        "//utils:Warnings",
        ":Compenv",
        ":Compile",
        ":Compmisc",
        ":Main_args",
        ":Makedepend",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//bytecomp:__pkg__"
    ]
)

compiler_signature(
    name = "Maindriver_cmi",
    src  = "maindriver.mli",
    opts = SIG_OPTS,
    stdlib_deps   = [
        "//stdlib:Stdlib.Format_cmi",
    ]
)

compiler_module(
    name   = "Makedepend",
    struct = "makedepend.ml",
    sig    = "Makedepend_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [
        "fragile-match",
        "disambiguated-name",
        "name-out-of-scope",
        "open-shadow-identifier",
    ]},
    deps   = [
        "//config:Config",
        "//parsing:Depend",
        "//parsing:Lexer",
        "//parsing:Location",
        "//parsing:Parse",
        "//parsing:Parser",
        "//utils:Clflags",
        "//utils:Misc",
        ":Compenv",
        ":Pparse",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib",
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Bytes",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
    ]
)

compiler_signature(
    name = "Makedepend_cmi",
    src  = "makedepend.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Parsetree_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib_cmi",
    ],
)

compiler_module(
    name   = "Optcompile",
    struct = "optcompile.ml",
    sig    = "Optcompile_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [w.NAME_OUT_OF_SCOPE_40]},
    deps   = [
        "//asmcomp:Asmgen",
        "//config:Config",
        "//lambda:Printlambda",
        "//lambda:Simplif",
        "//lambda:Translmod",
        "//middle_end/closure:Closure_middle_end",
        "//middle_end/flambda:Flambda_middle_end",
        "//middle_end:Compilenv",
        "//typing:Typedtree",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        ":Compile_common",
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_signature(
    name = "Optcompile_cmi",
    src  = "optcompile.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Backend_intf_cmi",
        "//typing:Typedtree_cmi",
        "//utils:Clflags_cmi",
        ":Compile_common_cmi",
    ]
)

compiler_module(
    name   = "Opterrors",
    struct = "opterrors.ml",
    sig    = "Opterrors_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//parsing:Location"
    ],
    visibility = ["//asmcomp:__pkg__"]
)

compiler_signature(
    name = "Opterrors_cmi",
    src  = "opterrors.mli",
    opts = SIG_OPTS,
    stdlib_deps   = ["//stdlib:Stdlib.Format_cmi"]
)

compiler_module(
    name   = "Optmain",
    struct = "optmain.ml",
    opts = MODULE_OPTS,
	warnings = {"disable": [w.MISSING_MLI_70]},
    deps   = [
        ":Optmaindriver",
    ],
    stdlib_deps = [
        "//stdlib:Primitives",
    ],
    visibility = [
        "@dev//:__subpackages__",
        "//:__pkg__",
        "//bin:__pkg__",
        "//boot:__subpackages__",
        "//dev:__subpackages__",
        "//test:__pkg__",
    ]
)

compiler_module(
    name   = "Optmaindriver",
    struct = "optmaindriver.ml",
    sig    = "Optmaindriver_cmi",
    opts = MODULE_OPTS,
    warnings = {"disable": [w.NAME_OUT_OF_SCOPE_40]},
    deps   = [
        "//asmcomp:Asmlibrarian",
        "//asmcomp:Asmpackager",
        "//asmcomp:Proc",
        "//config:Config",
        "//middle_end/flambda:Import_approx",
        "//middle_end:Compilenv",
        "//parsing:Location",
        "//utils:Clflags",
        "//utils:Profile",
        "//utils:Warnings",
        ":Compenv",
        ":Compmisc",
        ":Main_args",
        ":Makedepend",
        ":Optcompile",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
    ],
    visibility = [
        "//asmcomp:__pkg__"
    ]
)

compiler_signature(
    name = "Optmaindriver_cmi",
    src  = "optmaindriver.mli",
    opts = SIG_OPTS,
    deps   = [
        "//middle_end:Backend_intf_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
    ],
)

compiler_module(
    name   = "Pparse",
    struct = "pparse.ml",
    sig    = "Pparse_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//config:Config",
        "//parsing:Ast_invariants",
        "//parsing:Ast_mapper",
        "//parsing:Location",
        "//parsing:Parse",
        "//utils:Ccomp",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Profile",
        "//utils:Warnings",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Sys",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
    ]
)

compiler_signature(
    name = "Pparse_cmi",
    src  = "pparse.mli",
    opts = SIG_OPTS,
    deps   = [
        "//parsing:Parsetree_cmi",
    ],
    stdlib_deps = [
        "//stdlib:Stdlib.Format_cmi",
        "//stdlib:Stdlib.Lexing_cmi",
    ],
)

