load("//bzl:rules.bzl",
     "bootstrap_module",
     "bootstrap_signature",
     "bootstrap_library",
)

load("//config:BUILD.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")

MODULE_OPTS = ROOT_MODULE_OPTS
SIG_OPTS = ROOT_SIG_OPTS

STDLIB = ["//stdlib"]

exports_files([
    "cmi_format.mli", "cmi_format.ml",
    "cmo_format.mli",
    "cmxs_format.mli"
])

################################################################
bootstrap_library(
    name = "file_formats",
    manifest  = [
        ":Cmi_format",
        ":Cmt_format",
        ":Linear_format",
    ],
)

## defined in compilerlibs/Makefile.compilerlibs as COMP_CMI
bootstrap_library(
    name = "ocamlcommon",
    manifest  = [
        ":Cmo_format_cmi",
        ":Cmx_format_cmi",
        ":Cmxs_format_cmi",
    ],
    visibility = ["//compilerlibs:__pkg__"]
)

bootstrap_module(
    name   = "Cmi_format",
    struct = "cmi_format.ml",
    sig    = "Cmi_format_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//typing:Types",
        "//stdlib:Stdlib.String",
        "//utils:Misc",
        "//parsing:Location",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Digest",
        "//utils:Config",
    ],
    visibility = [
        "//tools:__pkg__",
        "//typing:__pkg__"
    ]
)

bootstrap_signature(
    name = "Cmi_format_cmi",
    src  = "cmi_format.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        "//typing:Types",
        "//utils:Misc",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Digest",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//typing:__pkg__"
    ]
)

bootstrap_signature(
    name = "Cmo_format_cmi",
    src  = "cmo_format.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        "//utils:Misc_cmi",
        "//typing:Ident",
        "//lambda:Lambda"
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
    ]
)

bootstrap_module(
    name   = "Cmt_format",
    struct = "cmt_format.ml",
    sig    = "Cmt_format_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        ":Cmi_format", ## (File_formats Cmi_format)
        "//typing:Types",
        "//typing:Typedtree",
        "//typing:Tast_mapper",
        "//stdlib:Stdlib.Sys",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Option",
        "//utils:Misc",
        "//parsing:Location",
        "//utils:Load_path",
        "//stdlib:Stdlib.List",
        "//parsing:Lexer",
        "//typing:Env",
        "//stdlib:Stdlib.Digest",
        "//utils:Config",
        "//utils:Clflags",
        "//stdlib:Stdlib.Array",
    ],
    visibility = [
        "//tools:__pkg__",
        "//typing:__pkg__"
    ]
)

bootstrap_signature(
    name = "Cmt_format_cmi",
    src  = "cmt_format.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        ":Cmi_format", ## (File_formats Cmi_format)
        "//typing:Types",
        "//typing:Typedtree_cmi",
        "//utils:Misc",
        "//parsing:Location",
        "//typing:Env",
        "//stdlib:Stdlib.Digest",
    ]
)

bootstrap_signature(
    name = "Cmx_format_cmi",
    src  = "cmx_format.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        "//utils:Misc_cmi",
        "//middle_end/flambda:Export_info_cmi",
        "//stdlib:Stdlib.Digest",
        "//middle_end:Clambda_cmi"
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//middle_end:__pkg__",
        "//tools:__pkg__",
    ]
)

bootstrap_signature(
    name = "Cmxs_format_cmi",
    src  = "cmxs_format.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        "//utils:Misc_cmi",
        "//stdlib:Stdlib.Digest"
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//tools:__pkg__",
    ]
)

bootstrap_module(
    name   = "Linear_format",
    struct = "linear_format.ml",
    sig    = "Linear_format_cmi",
    opts = MODULE_OPTS,
    deps   = STDLIB + [
        "//stdlib:Stdlib.String",
        "//utils:Misc",
        "//parsing:Location",
        "//asmcomp:Linear",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Digest",
        "//utils:Config",
        "//asmcomp:Cmm"
    ],
    visibility = ["//asmcomp:__pkg__"]
)

bootstrap_signature(
    name = "Linear_format_cmi",
    src  = "linear_format.mli",
    opts = SIG_OPTS,
    deps   = STDLIB + [
        "//asmcomp:Linear_cmi",
        "//stdlib:Stdlib.Digest_cmi",
        "//asmcomp:Cmm"
    ]
)

